--- a/index.css
+++ b/index.css
@@ -9,16 +9,22 @@ body
 }
 
 header 
-{
-	width: 365px;
-	
+{	
 	font-family: Arial;
-	font-size: 5.5em;
+	font-size: 80px;
 	font-weight: 700;
 	color: white;
 	text-shadow: -4px 4px 3px #666, 1px -1px 2px #000;
 
 	margin: 35px 0;
+}
+
+@media (max-width: 480px)
+{
+	header
+	{
+		font-size: 16.66666vw;
+	}
 }
 
 main
